# Linkee

./: .gitignore  LICENSE  README.md
client/: pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/slyeet/linkee/: MainActivity.kt
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/screens/: brightness_screen.dart  home_screen.dart  keyboard_screen.dart  media_screen.dart  mouse_screen.dart  server_discovery.dart  volume_screen.dart
client/lib/services/: discovery_service.dart  server_service.dart
daemon/: Cargo.toml
daemon/src/: enums.rs  main.rs  models.rs
daemon/src/handlers/: keyboard.rs  mouse.rs
server/: Cargo.toml  Linkee.dmg  entitlements.plist
server/Linkee.app/Contents/: Info.plist
server/Linkee.app/Contents/MacOS/: launcher.sh  server
server/Linkee.app/Contents/Resources/: Logo.icns
server/Linkee.app/Contents/_CodeSignature/: CodeResources
server/src/: enums.rs  main.rs  models.rs
server/src/handlers/: brightness.rs  keyboard.rs  media.rs  mod.rs  mouse.rs
