[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.38", features = ["derive"]}
clap_derive = "4.5.28"
enigo = "0.3.0"
hyper = {version="1.6.0", features=["full"]}
lazy_static = "1.5.0"
once_cell = "1.21.3"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
socket2 = "0.5.9"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


